<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="6dip"
        android:paddingRight="6dip"
        android:paddingTop="8dip"
        android:paddingBottom="2dip">
    
        <EditText
            android:id="@+id/search_text"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:singleLine="true"
            android:hint="@string/search_hint"
            android:ellipsize="end"
            android:textSize="16sp"
             
        />
            
        <ImageButton
            android:id="@+id/barcode_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_btn_barcode"
            android:contentDescription="@string/desc_barcode"
        />
    
    </LinearLayout>


    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0"
        
    />


        <TextView
             android:id="@android:id/empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        android:textSize="20sp"
        android:text="@string/no_items"
                android:gravity="center"
                 android:paddingLeft="17sp"
                android:paddingRight="17sp"/>


</LinearLayout>